Overflow Fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,6 @@ body, html {
   font-family: 'Playfair Display', serif;
   font-weight: 200;
   font-size: 18px;
-  overflow: scroll;
 }
 
 .LukeSkinner h1 {
